--- a/HomeSchoolInteraction/html/homeSchool/gradeList.html
+++ b/HomeSchoolInteraction/html/homeSchool/gradeList.html
@@ -281,8 +281,8 @@
 								tempGrade = '全部年级';
 							}
 						} else {
-							mui.toast('请选择年级、班级');
-							return;
+//							mui.toast('请选择年级、班级');
+//							return;
 						}
 
 						mui.fire(plus.webview.currentWebview().opener(), 'selectGradeClass', {
