--- a/HomeSchoolInteraction/html/login/firstPage.html
+++ b/HomeSchoolInteraction/html/login/firstPage.html
@@ -42,19 +42,33 @@
 	<script src="../../js/utils/events.js"></script>
 	<script type="text/javascript">
 		mui.init({
-				statusBarBackground: '#00CFBD'
-			});
+			statusBarBackground: '#00CFBD'
+		});
 		//		$(function() {
 		//			
 		//		});
 		var tempModel = {};
-		var loginFlag = 0; //0自动登录，1不自动登录
+		var loginFlag = 0; //0自动登录，1不自动登录//判断上次有没有登录，如果登录，就不执行登录协议
 		mui.plusReady(function() {
 			tempModel = {
 				uuid: plus.device.uuid,
 				appid: plus.runtime.appid
 			}
 			setUUID();
+			document.addEventListener("netchange", wainshow, false);
+
+			function wainshow() {
+				if(plus.networkinfo.getCurrentType() == plus.networkinfo.CONNECTION_NONE) {
+					mui.toast("网络异常，请检查网络设置！");
+				} else {
+					mui.toast("已接入网络");
+					//判断上次有没有登录，如果登录，就不执行登录协议
+					if(loginFlag == 0) {
+						loginFlag = 1;
+						setUUID();
+					}
+				}
+			}
 		});
 		document.addEventListener("plusready", function() {
 			message = document.getElementById("message");
@@ -77,7 +91,7 @@
 			// 监听在线消息事件
 			plus.push.addEventListener("receive", function(msg) {
 				//设置app角标,flag=0直接设置角标数字，flag=1角标减1,falg=2角标加1
-				utils.setBadgeNumber(2,0);
+				utils.setBadgeNumber(2, 0);
 				if(msg.aps) { // Apple APNS message
 					outSet("接收到在线APNS消息：");
 				} else {
@@ -133,6 +147,7 @@
 					postDataEncry('Login', enData1, comData1, 0, function(data1) {
 						events.closeWaiting();
 						if(data1.RspCode == 0) {
+							loginFlag = 1;
 							if(data1.RspData.dpts == null) {
 								data1.RspData.dpts = [];
 							}
@@ -179,9 +194,9 @@
 									//											mui.toast(data.RspTxt);
 								}
 							});
-							if(personal.utid=='0'){//无权限
+							if(personal.utid == '0') { //无权限
 								plus.webview.open('../../index2.html');
-							}else{
+							} else {
 								utils.mOpenWithData("../../index.html", personal);
 							}
 						} else {
@@ -189,7 +204,7 @@
 						}
 					});
 				} else {
-					setUUID();
+					//					setUUID();
 					mui.toast(data.RspTxt);
 				}
 			});
@@ -198,28 +213,28 @@
 
 		//从ios原生得到信息
 		var setUUID = function() {
-			if(loginFlag == 0) {
-				store.set(window.storageKeyName.PUBLICPARAMETER, tempModel);
-				//判断上次是否登录过，自动登录
-				var personal = store.get(window.storageKeyName.PERSONALINFO);
-				if(personal) {
-					if(personal.utid == 'undefined' || personal.utid == null || personal.userName0 == null) {
-						//login登录
-						loginPro('00000000000', '123');
-					} else {
-						if (personal.userName0.length>0) {
-							//login登录
-						loginPro(personal.userName0, personal.password0);
-						}else{
-							loginPro('00000000000', '000000');
-						}
-					}
-				} else {
+			//			if(loginFlag == 0) {
+			store.set(window.storageKeyName.PUBLICPARAMETER, tempModel);
+			//判断上次是否登录过，自动登录
+			var personal = store.get(window.storageKeyName.PERSONALINFO);
+			if(personal) {
+				if(personal.utid == 'undefined' || personal.utid == null || personal.userName0 == null) {
+					//login登录
 					loginPro('00000000000', '000000');
+				} else {
+					if(personal.userName0) {
+						//login登录
+						loginPro(personal.userName0, personal.password0);
+					} else {
+						loginPro('00000000000', '000000');
+					}
 				}
 			} else {
-
+				loginPro('00000000000', '000000');
 			}
+			//			} else {
+			//
+			//			}
 		}
 	</script>
 
