--- a/HomeSchoolInteraction/html/utils/customizeCity.html
+++ b/HomeSchoolInteraction/html/utils/customizeCity.html
@@ -213,11 +213,11 @@
 
 				//自己当前手机号对应的城市(可能修改后的)，从内存中获取
 				//var tempInfo = window.myStorage.getItem(window.storageKeyName.PERSONALINFO);
-				if(pInfo.utid != 0) { //用户显示当前城市
-					document.getElementById("userCityTitle").style.display = 'block';
-					document.getElementById("userCity").style.display = 'inline';
-					addBeforeCity(pInfo.uarea);
-				}
+//				if(pInfo.utid != 0) { //用户显示当前城市
+//					document.getElementById("userCityTitle").style.display = 'block';
+//					document.getElementById("userCity").style.display = 'inline';
+//					addBeforeCity(pInfo.uarea);
+//				}
 
 				if(main.data.id == 'uarea') { //uarea账号地区
 					document.getElementById("title").innerText = '所在地';
@@ -369,13 +369,13 @@
 							};
 							//记录游客订制的城市
 							if(main.data.id == '0') { //科教
-//								window.myStorage.setItem(window.storageKeyName.SECITY, localCity);
+								//								window.myStorage.setItem(window.storageKeyName.SECITY, localCity);
 								store.set(window.storageKeyName.SECITY, localCity);
 							} else if(main.data.id == '1') { //展现
-//								window.myStorage.setItem(window.storageKeyName.SHOWCITY, localCity);
+								//								window.myStorage.setItem(window.storageKeyName.SHOWCITY, localCity);
 								store.set(window.storageKeyName.SHOWCITY, localCity);
 							}
-//							events.fireToPageNone(main.data.webid, 'customizeCity', citiesInfo);
+							//							events.fireToPageNone(main.data.webid, 'customizeCity', citiesInfo);
 							mui.fire(plus.webview.currentWebview().opener(), 'customizeCity', citiesInfo);
 							mui.toast('订制城市成功');
 							mui.back();
@@ -544,6 +544,15 @@
 					if(data.RspCode == 0) {
 						var tempArry = cities;
 						mui.each(cityArray, function(index, element) {
+							if(element.acode.substring(0, 4) == personal.areano.substring(0, 4)) {
+								personal.uarea = element;
+								store.set(window.storageKeyName.PERSONALINFO, personal);
+								if(personal.utid != 0) { //用户显示当前城市
+									document.getElementById("userCityTitle").style.display = 'block';
+									document.getElementById("userCity").style.display = 'inline';
+									addBeforeCity(personal.uarea);
+								}
+							}
 							//遍历，然后判断是否是之前选择的城市，修改选中状态
 							var proAcode = element.acode.substring(0, 2); //截取省份代码
 							if(proAcode == '37' || proAcode == '42' || proAcode == '45' || proAcode == '46') {
@@ -585,7 +594,7 @@
 							type: main.data.id,
 							cities: commitCities
 						};
-//						events.fireToPageNone(main.data.webid, 'customizeCity', citiesInfo);
+						//						events.fireToPageNone(main.data.webid, 'customizeCity', citiesInfo);
 						mui.fire(plus.webview.currentWebview().opener(), 'customizeCity', citiesInfo);
 						mui.toast('订制城市成功');
 						mui.back();
