--- a/HomeSchoolInteraction/html/login/loginIndex.html
+++ b/HomeSchoolInteraction/html/login/loginIndex.html
@@ -38,6 +38,7 @@
 
 			<div style="padding: 0px 20px;">
 				<button id='login' type="button" class="mui-btn mui-btn-block mui-btn-primary" style="background: #00cfba; border:none; margin-top: 30px;height: 40px;padding-top: 8px;">登录</button>
+				<button id='register' type="button" class="mui-btn mui-btn-block mui-btn-primary" style="background: #00cfba; border:none; margin-top: 30px;height: 40px;padding-top: 8px;">注册</button>
 			</div>
 		</div>
 	</body>
@@ -134,6 +135,7 @@
 
 			}
 		});
+		
 
 		window.addEventListener('quit', function(data) {
 			console.log("data" + JSON.stringify(data.detail));
