--- a/HomeSchoolInteraction/html/homeSchool/homeSchoolIndex.html
+++ b/HomeSchoolInteraction/html/homeSchool/homeSchoolIndex.html
@@ -216,8 +216,8 @@
 					//侧滑菜单默认隐藏，这样可以节省内存；
 					menu = mui.preload({
 						id: 'mine.html',
-						url: 'mine.html',
-						styles: {
+						url: '../mine/mine.html',
+						styles: { 
 							left: 0,
 							width: '70%',
 							zindex: 9997
