--- a/HomeSchoolInteraction/html/order/myOrderList.html
+++ b/HomeSchoolInteraction/html/order/myOrderList.html
@@ -75,19 +75,19 @@
 				</div>
 				<div v-else  v-cloak class="mui-scroll">
 				 	<ul class="mui-table-view">
-						<li v-for="item in orderList" class="mui-table-view-cell mui-media">
+						<li aaa="1" v-for="item in orderList" @click="toMealDetails($event,item)" class="mui-table-view-cell mui-media">
 							<a href="javascript:;">
 								<img class="mui-media-object mui-pull-left" :src=item.imgUrl style="width: 90px;height:90px;">
 								<div class="mui-media-body">
 									<p class='mui-ellipsis-title'>{{item.title}}</p>
 									<p class='mui-ellipsis'>{{item.titleBody}}</p> 
 									<div v-if="item.orderState == 1" style="margin-top: 5px;">
-										<p class="ul-p" style="color:#00CFBD">{{item.titleFooter}}</p>
-										<button class="ul-btn" class="mui-btn mui-btn-mini">立即订购</button>
+										<p class="ul-p" style="color:#00CFBD">{{item.expenses}}</p>
+										<button aaa="2" class="ul-btn" class="mui-btn mui-btn-mini">立即订购</button>
 									</div>
 									<div v-else style="margin-top: 5px;">
-										<p class="ul-p">{{item.titleFooter}}</p>
-										<button class="ul-btn" class="mui-btn mui-btn-mini">套餐续费</button>
+										<p class="ul-p">结束时间：{{item.endTime}}</p>
+										<button aaa="2"  class="ul-btn" class="mui-btn mui-btn-mini">套餐续费</button>
 									</div>
 								</div>
 							</a>
@@ -98,6 +98,7 @@
 		</div>
 		<script src="../../js/mui.js"></script>
 		<script src="../../js/utils/vue.js"></script>
+		<script src="../../js/utils/utils.js"></script>
 		<script src="../../js/utils/mui.pullToRefresh2.js"></script>
 		<script src="../../js/utils/mui.pullToRefresh.material2.js"></script>
 		<script src="../../js/utils/vconsole.min.js"></script>
@@ -155,20 +156,38 @@
 				el:'#orders'
 				,data:{
 					orderList:[
-						{imgUrl:'../../img/login/headImg.png',title:'家校互动2018新款基础套餐1',titleBody:'2018新款基础套餐是我们公司是我们公司是我们公司是我们公司是我们公司是我们公司是我们公司是我们公司',titleFooter:'10元/月',orderState:1}
-						,{imgUrl:'../../img/login/headImg.png',title:'家校互动2018新款基础套餐2',titleBody:'2018新款基础套餐是我们公司是我们公司是我们公司是我们公司是我们公司是我们公司是我们公司是我们公司',titleFooter:'结束时间：2018-7-2',orderState:2}
-						,{imgUrl:'../../img/login/headImg.png',title:'家校互动2018新款基础套餐3长一点',titleBody:'2018新款基础套餐是我们公司是我们公司是我们公司是我们公司是我们公司是我们公司是我们公司是我们公司',titleFooter:'10元/月',orderState:1}
-						,{imgUrl:'../../img/login/headImg.png',title:'家校互动2018新款基础套餐4长一点再长一点',titleBody:'2018新款基础套餐是我们公司是我们公司是我们公司是我们公司是我们公司是我们公司是我们公司是我们公司',titleFooter:'10元/月',orderState:1}
-						,{imgUrl:'../../img/login/headImg.png',title:'家校互动2018新款基础套餐5长一点再长一点再长一点再长一点再长一点',titleBody:'2018新款基础套餐是我们公司是我们公司是我们公司是我们公司是我们公司是我们公司是我们公司是我们公司',titleFooter:'结束时间：2018-7-2',orderState:2}	  
+						{imgUrl:'../../img/login/headImg.png',title:'家校互动2018新款基础套餐1',titleBody:'2018新款基础套餐是我们公司是我们公司是我们公司是我们公司是我们公司是我们公司是我们公司是我们公司',expenses:'10元/月',endTime:'',orderState:1}
+						,{imgUrl:'../../img/login/headImg.png',title:'家校互动2018新款基础套餐2',titleBody:'2018新款基础套餐是我们公司是我们公司是我们公司是我们公司是我们公司是我们公司是我们公司是我们公司',expenses:'10元/月',endTime:'2018-7-2',orderState:2}
+						,{imgUrl:'../../img/login/headImg.png',title:'家校互动2018新款基础套餐3长一点',titleBody:'2018新款基础套餐是我们公司是我们公司是我们公司是我们公司是我们公司是我们公司是我们公司是我们公司',expenses:'10元/月',endTime:'',orderState:1}
+						,{imgUrl:'../../img/login/headImg.png',title:'家校互动2018新款基础套餐4长一点再长一点',titleBody:'2018新款基础套餐是我们公司是我们公司是我们公司是我们公司是我们公司是我们公司是我们公司是我们公司',expenses:'10元/月',endTime:'',orderState:1}
+						,{imgUrl:'../../img/login/headImg.png',title:'家校互动2018新款基础套餐5长一点再长一点再长一点再长一点再长一点',titleBody:'2018新款基础套餐是我们公司是我们公司是我们公司是我们公司是我们公司是我们公司是我们公司是我们公司',expenses:'10元/月',endTime:'2018-7-2',orderState:2}	  
 					]
 					,flag: 0 //0刷新，1加载更多
 					,pageIndex: 1 //当前页数
 					,canTap:true //下拉刷新时，上拉加载能否使用 true
 				}
+				,methods:{
+					toMealDetails:function(event,item){
+						var _event=event.target;
+				        if( $(_event).attr('class') == 'mui-ellipsis'){ //点击li标签
+				        	if(item.orderState==1)
+								utils.mOpenWithData("../../html/order/mealDetails_order.html", item);
+							else
+								utils.mOpenWithData("../../html/order/mealDetails_renew.html", item);
+				        } else if($(_event).attr('class') =='ul-btn') {//点击li下的button
+				        	 this.$options.methods.btnClick(item);
+				        }
+						
+					}
+					,btnClick:function(item){
+						console.log('button与li点击事件冲突吗？'+JSON.stringify(item))
+					}
+				}
 			});
 			
 			//获取订单列表
 			function getOrderList(){
+				console.log('获取我的订购list')
 				mui('#scroll').pullRefresh().endPulldownToRefresh();
 				mui('#scroll').pullRefresh().endPullupToRefresh(); 
 			}
