--- a/HomeSchoolInteraction/html/mine/mine.html
+++ b/HomeSchoolInteraction/html/mine/mine.html
@@ -161,7 +161,7 @@
 							if (setting.tempID ==0) {
 								utils.mOpenWithData("../../html/mine/modifyPassword.html", setting);
 							} else if (setting.tempID ==1) {
-								utils.mOpenWithData("../../html/order/myOrderList.html", setting);
+								utils.mOpenWithData("../../html/order/orderList.html", setting);
 							}
 						},
 						clickHeadImg:function(){
