--- a/HomeSchoolInteraction/html/order/packageDetails_order.html
+++ b/HomeSchoolInteraction/html/order/packageDetails_order.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta charset="utf-8">
-		<title>套餐订购</title>
+		<title>套餐详情--订购</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
