--- a/HomeSchoolInteraction/html/order/packageDetails_renew.html
+++ b/HomeSchoolInteraction/html/order/packageDetails_renew.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta charset="utf-8">
-		<title>套餐续费 </title>
+		<title>套餐详情--续费 </title>
 		<meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
