--- a/HomeSchoolInteraction/html/homeSchool/noticeDetail.html
+++ b/HomeSchoolInteraction/html/homeSchool/noticeDetail.html
@@ -165,12 +165,12 @@
 			<p style="color: black;padding: 10px;font-size: 14px;color: #333333;word-break: break-all;">{{noticesDetail.NoticeContent}}</p>
 			<!--<p class="" style="height: 10px;background-color: #f2f2f2;"></p>-->
 			<div id="" v-show="noticesDetail.NoticeEncAddr.length>0">
-
 				<div class="" v-if="noticesDetail.NoticeEncAddr.length==1&&noticesDetail.encFlag==2">
 					<ul class="mui-table-view mui-grid-view">
 						<li class="mui-table-view-cell mui-media" v-for="(picModel,index) in noticesDetail.NoticeEncAddr">
 							<a href="#" >
-								<img @click="playVideo" class="notice-one-img mui-media-object" src="../../img/utils/playvideo2.png" style="height: 180px;width: 180px;"></a>
+								<img v-if="noticesDetail.NoticeEncImgAddr&&noticesDetail.NoticeEncImgAddr.length>0" @click="playVideo" class="notice-one-img mui-media-object" :src=noticesDetail.NoticeEncImgAddr style="height: 180px;width: 180px;">
+								<img v-else="" @click="playVideo" class="notice-one-img mui-media-object" src="../../img/utils/playvideo2.png" style="height: 180px;width: 180px;"></a>
 						</li>
 						<!--<li class="mui-table-view-cell mui-media mui-col-xs-12" v-for="(picModel,index) in noticesDetail.NoticeEncAddr">
 							<a href="#" style="">
