--- a/HomeSchoolInteraction/html/homeSchool/notice_parentsList.html
+++ b/HomeSchoolInteraction/html/homeSchool/notice_parentsList.html
@@ -62,6 +62,7 @@
 
 			<ul class="mui-table-view" v-for="(classModel,index) in classListArray">
 				<li v-if="classModel.showFlag>0" class="mui-table-view-cell">
+				<!--<li class="mui-table-view-cell">-->
 					<div style="width: 50%;height: 40px;margin-top: 5px;" class="flex-item">
 						<div class="mui-input-row mui-checkbox mui-left" style="margin-top: -10px;height: 30px;">
 							<label class="className">{{classModel.clsname}}</label>
@@ -210,12 +211,37 @@
 					addNotice: function() {
 						var tempStu = ''; //显示用的家长
 						var tempStuArray = []; //选择的家长数组
+						var tempGradeArray = [];//判断年级是否全部选择用
 						//循环所有数据
 						for(var i = 0; i < classListData.classListArray.length; i++) {
 							var classModel = classListData.classListArray[i];
-							if(classModel.flag == 1) {
-								tempStu = tempStu + ';' + classModel.clsname + '全部家长';
+							//判断班级所在的年级，是否全部选择
+							var sumGrade = 0;
+							var selectGrade = 0;
+							for(var m = 0; m < classListData.classListArray.length; m++) {
+								var classModel1 = classListData.classListArray[m];
+								if(classModel.grdid == classModel1.grdid) {
+									sumGrade++;
+									if(classModel1.flag == 1) {
+										selectGrade++;
+									}
+								}
 							}
+							if(selectGrade > 0) {
+								if(sumGrade == selectGrade && classModel.stuArray.length > 0) {
+									if (IsInArray(tempGradeArray,classModel.grdid)) {//存在
+										
+									} else{
+										tempStu = tempStu + ';' + classModel.grdname + '全部班级家长';
+										tempGradeArray.push(classModel.grdid);
+									}
+								} else {
+									if(classModel.flag == 1) {
+										tempStu = tempStu + ';' + classModel.clsname + '全部家长';
+									}
+								}
+							}
+
 							var tempMMM = 0;
 							var tempNNN = 0;
 							for(var a = 0; a < classModel.stuArray.length; a++) {
@@ -252,6 +278,12 @@
 					}
 				}
 			});
+
+			//判断数组中，是否包含某个值
+			function IsInArray(arr, val) {　　
+				var testStr = ',' + arr.join(",") + ",";　　
+				return testStr.indexOf("," + val + ",") != -1;
+			}
 
 			//4.学校班级
 			var getClassList = function() {
@@ -331,7 +363,7 @@
 							for(var a = 0; a < classListData.classListArray.length; a++) {
 								var classModel = classListData.classListArray[a];
 								if(classModel.clsid == stuModel.clsid) {
-									//									classModel = $.extend(classModel, stuModel);
+									classModel.grdname = stuModel.grdname;
 									classModel.stuArray.push(stuModel);
 								}
 							}
