--- a/HomeSchoolInteraction/html/homeSchool/gradeList.html
+++ b/HomeSchoolInteraction/html/homeSchool/gradeList.html
@@ -111,6 +111,7 @@
 			var personalFlag = 0; //0无权限，1授权用户，2年级领导，3班主任
 			var classIDsArray = []; //选择的班级id数组
 			var gradeIDsArray = []; //全选择班级的年级id数组
+			var schoolStuCountArray = []; //获取到的班级中是否有人员数组
 			mui.plusReady(function() {
 				curPage = utils.getDataFromUrl(window.location.href);
 				console.log('2222:' + JSON.stringify(curPage));
@@ -281,8 +282,8 @@
 								tempGrade = '全部年级';
 							}
 						} else {
-//							mui.toast('请选择年级、班级');
-//							return;
+							//							mui.toast('请选择年级、班级');
+							//							return;
 						}
 
 						mui.fire(plus.webview.currentWebview().opener(), 'selectGradeClass', {
@@ -312,7 +313,7 @@
 				postDataEncry('SchGrade', enData0, comData0, 0, function(data) {
 					events.closeWaiting();
 					if(data.RspCode == 0) {
-//						data.RspData.grds.sort(compare("grdname"));
+						//						data.RspData.grds.sort(compare("grdname"));
 						var gradeStr = ''; //要获取班级的年级id
 						for(var i = 0; i < data.RspData.grds.length; i++) {
 							var model = data.RspData.grds[i];
@@ -376,8 +377,8 @@
 						}
 						//获取年级里面的班级
 						gradeStr = gradeStr.substr(1);
-						//3.学校年级下班级
-						getClassList(gradeStr);
+						//2.7:	学校班级学生统计
+						SchStuCount(gradeStr);
 					} else {
 						mui.toast(data.RspTxt, "cancel");
 					}
@@ -399,6 +400,20 @@
 				postDataEncry('GradeClass', enData0, comData0, 0, function(data) {
 					events.closeWaiting();
 					if(data.RspCode == 0) {
+						//判断获取到的班级，有没有人，将没有人的去掉
+						for(var q = data.RspData.clss.length-1; q >=0 ; q--) {
+							var tempclass = data.RspData.clss[q];
+							var tempAAA = 0;
+							for(var w = 0; w < schoolStuCountArray.length; w++) {
+								var tempclass1 = schoolStuCountArray[w];
+								if (tempclass.clsid == tempclass1.clsid) {
+									tempAAA++;
+								}
+							}
+							if (tempAAA==0) {
+								data.RspData.clss.splice(q,1);
+							}
+						}
 						data.RspData.clss.sort(compare("clsname"));
 						//循环年级
 						for(var i = 0; i < gradeListData.gradeListArray.length; i++) {
@@ -461,9 +476,40 @@
 				});
 			}
 
+			//2.7:	学校班级学生统计
+			var SchStuCount = function(gradeStr) {
+				var enData0 = {};
+				//不需要加密的数据
+				var comData0 = {
+					uuid: publicParameter.uuid, //用户设备号
+					utoken: personal.utoken, //用户令牌
+					appid: publicParameter.appid //系统所分配的应用ID
+				}
+				events.showWaiting();
+				//发送网络请求，data为网络返回值
+				postDataEncry('SchStuC', enData0, comData0, 0, function(data) {
+					events.closeWaiting();
+					console.log('学校班级学生统计:' + JSON.stringify(data));
+					if(data.RspCode == 0) {
+						schoolStuCountArray = data.RspData.schstuc;
+						//3.学校年级下班级
+						getClassList(gradeStr);
+					} else {
+						mui.toast(data.RspTxt, "cancel");
+					}
+				});
+			}
+
 			//刚进入页面得到数据时，判断全部的勾选状态
 			var allDataSelect = function() {
 				var tempFlag = 0;
+				for(var i = gradeListData.gradeListArray.length-1; i >= 0 ; i--) {
+					var gradeModel = gradeListData.gradeListArray[i];
+					//将年级里没有班级的去掉
+					if (gradeModel.classArray.length==0) {
+						gradeListData.gradeListArray.splice(i,1);
+					}
+				}
 				for(var i = 0; i < gradeListData.gradeListArray.length; i++) {
 					var gradeModel = gradeListData.gradeListArray[i];
 					var tempFalg0 = 0;
