把mine有还原回去了

--- a/HomeSchoolInteraction/html/homeSchool/homeSchoolIndex.html
+++ b/HomeSchoolInteraction/html/homeSchool/homeSchoolIndex.html
@@ -219,7 +219,7 @@
 					//侧滑菜单默认隐藏，这样可以节省内存；
 					menu = mui.preload({
 						id: 'mine.html',
-						url: '../mine/mine.html',
+						url: 'mine.html',
 						styles: { 
 							left: 0,
 							width: '70%',
