--- a/HomeSchoolInteraction/html/homeSchool/homeSchoolIndex.html
+++ b/HomeSchoolInteraction/html/homeSchool/homeSchoolIndex.html
@@ -235,7 +235,7 @@
 				var tempHead = new Vue({
 						el: "#tempHead",
 						data: {
-							headImg: personal.imgurl 
+							headImg: setImg(personal.imgurl)
 						},
 						methods: {
 							clickLeftImg: function() {
