--- a/HomeSchoolInteraction/html/login/firstPage.html
+++ b/HomeSchoolInteraction/html/login/firstPage.html
@@ -166,6 +166,9 @@
 							if(data1.RspData.urolestr == null) {
 								data1.RspData.urolestr = '00000000000000000000000000000';
 							}
+							if (data1.RspData.imgurl==null||data1.RspData.imgurl.length==0) {
+								data1.RspData.imgurl = '../../img/login/headImg.png';
+							}
 							data1.RspData.userName0 = tempName;
 							data1.RspData.password0 = tempPW;
 							var model_area = {
@@ -199,6 +202,9 @@
 							} else {
 								utils.mOpenWithData("../../index.html", personal);
 							}
+						}else if(data1.RspCode == 5){//用户名或密码不正确
+							store.set(window.storageKeyName.PERSONALINFO, {});
+							setUUID();
 						} else {
 							mui.toast(data1.RspTxt);
 						}
