--- a/HomeSchoolInteraction/html/login/loginFnoPermissions.html
+++ b/HomeSchoolInteraction/html/login/loginFnoPermissions.html
@@ -198,6 +198,9 @@
 							if(data1.RspData.urolestr == null) {
 								data1.RspData.urolestr = '00000000000000000000000000000';
 							}
+							if (data1.RspData.imgurl==null||data1.RspData.imgurl.length==0) {
+								data1.RspData.imgurl = '../../img/login/headImg.png';
+							}
 							data1.RspData.userName0 = tempName;
 							data1.RspData.password0 = tempPW;
 							var model_area = {
@@ -227,30 +230,33 @@
 								}
 							});
 							
-							
-							//判断权限  
-							var personal = store.get(window.storageKeyName.PERSONALINFO);
-							var permission =true; 
-							if(personal.utid=='0'){
-								permission=false;
-							}
-							console.log('11111111111111111111'+permission)
-							if(permission){
-								plus.webview.open('../../index.html');
-							}else{
-//								plus.webview.open('../../index2.html');
-							}
-							var wvs = plus.webview.all();
-							for (var i = 0, len = wvs.length; i < len; i++) {
-								if (wvs[i].getURL().indexOf('homeSchoolIndex.html')!=-1
-								||wvs[i].getURL().indexOf('sciedu_home.html')!=-1
-								||wvs[i].getURL().indexOf('courseIndex.html')!=-1){
-											continue;
+							//如果密码为1--6，让修改密码后，进入主界面
+							if(personal.password0 == '123456') {
+								var tempModel = {
+									flag:1//0是主动修改密码，1是判断是默认密码，自动让修改
 								}
-								plus.webview.close(wvs[i]);
+								utils.mOpenWithData("../../html/mine/modifyPassword.html", tempModel);
+							} else {
+								//判断权限  
+								var permission = true;
+								if(personal.utid == '0') {
+									permission = false;
+								}
+								if(permission) {
+									plus.webview.open('../../index.html');
+								}
+								var wvs = plus.webview.all();
+								for(var i = 0, len = wvs.length; i < len; i++) {
+									if(wvs[i].getURL().indexOf('homeSchoolIndex.html') != -1 ||
+										wvs[i].getURL().indexOf('sciedu_home.html') != -1 ||
+										wvs[i].getURL().indexOf('courseIndex.html') != -1) {
+										continue;
+									}
+									plus.webview.close(wvs[i]);
+								}
+								var curr = plus.webview.currentWebview();
+								curr.close();
 							}
-							var curr = plus.webview.currentWebview();
-							curr.close();
 						} else {
 							mui.toast(data1.RspTxt);
 						}
