--- a/HomeSchoolInteraction/html/login/loginIndex.html
+++ b/HomeSchoolInteraction/html/login/loginIndex.html
@@ -14,7 +14,7 @@
 		<link rel="stylesheet" href="../js/demoCssJs/demos.css">-->
 		<script type="text/javascript">
 		</script>
-  
+
 	</head>
 
 	<body>
@@ -62,8 +62,6 @@
 	<script src="../../js/utils/storageutil.js" type="text/javascript" charset="utf-8"></script>
 	<script src="../../js/utils/events.js"></script>
 	<script type="text/javascript">
-		
-		
 		//		$(function() {
 		//			
 		//		});
@@ -74,50 +72,50 @@
 				uuid: plus.device.uuid,
 				appid: plus.runtime.appid
 			}
-			
+
 			var backButtonPress = 0;
-				mui.back = function(event) {
-						backButtonPress++;
-						if(backButtonPress > 1) {
-							plus.runtime.quit();
-						} else {
-							plus.nativeUI.toast('再按一次退出应用');
-						}
-						setTimeout(function() {
-							backButtonPress = 0;
-						}, 1000);
-						return false;
-				};
-//			setUUID();
+			mui.back = function(event) {
+				backButtonPress++;
+				if(backButtonPress > 1) {
+					plus.runtime.quit();
+				} else {
+					plus.nativeUI.toast('再按一次退出应用');
+				}
+				setTimeout(function() {
+					backButtonPress = 0;
+				}, 1000);
+				return false;
+			};
+			//			setUUID();
 		});
-//		document.addEventListener("plusready", function() {
-//			message = document.getElementById("message");
-//			// 监听点击消息事件
-//			plus.push.addEventListener("click", function(msg) {
-//				// 判断是从本地创建还是离线推送的消息
-//				switch(msg.payload) {
-//					case "LocalMSG":
-//						outSet("点击本地创建消息启动：");
-//						break;
-//					default:
-//						outSet("点击离线推送消息启动：");
-//						break;
-//				}
-//				// 提示点击的内容
-//				plus.ui.alert(msg.content);
-//				// 处理其它数据
-//				logoutPushMsg(msg);
-//			}, false);
-//			// 监听在线消息事件
-//			plus.push.addEventListener("receive", function(msg) {
-//				if(msg.aps) { // Apple APNS message
-//					outSet("接收到在线APNS消息：");
-//				} else {
-//					outSet("接收到在线透传消息：");
-//				}
-//				logoutPushMsg(msg);
-//			}, false);
-//		}, false);
+		//		document.addEventListener("plusready", function() {
+		//			message = document.getElementById("message");
+		//			// 监听点击消息事件
+		//			plus.push.addEventListener("click", function(msg) {
+		//				// 判断是从本地创建还是离线推送的消息
+		//				switch(msg.payload) {
+		//					case "LocalMSG":
+		//						outSet("点击本地创建消息启动：");
+		//						break;
+		//					default:
+		//						outSet("点击离线推送消息启动：");
+		//						break;
+		//				}
+		//				// 提示点击的内容
+		//				plus.ui.alert(msg.content);
+		//				// 处理其它数据
+		//				logoutPushMsg(msg);
+		//			}, false);
+		//			// 监听在线消息事件
+		//			plus.push.addEventListener("receive", function(msg) {
+		//				if(msg.aps) { // Apple APNS message
+		//					outSet("接收到在线APNS消息：");
+		//				} else {
+		//					outSet("接收到在线透传消息：");
+		//				}
+		//				logoutPushMsg(msg);
+		//			}, false);
+		//		}, false);
 		document.getElementById("login").addEventListener('tap', function(event) {
 			console.log("登录");
 			var tempName = document.getElementById("account").value;
@@ -135,7 +133,6 @@
 
 			}
 		});
-		
 
 		window.addEventListener('quit', function(data) {
 			console.log("data" + JSON.stringify(data.detail));
@@ -207,6 +204,9 @@
 							if(data1.RspData.urolestr == null) {
 								data1.RspData.urolestr = '00000000000000000000000000000';
 							}
+							if (data1.RspData.imgurl==null||data1.RspData.imgurl.length==0) {
+								data1.RspData.imgurl = '../../img/login/headImg.png';
+							}
 							data1.RspData.userName0 = tempName;
 							data1.RspData.password0 = tempPW;
 							var model_area = {
@@ -235,32 +235,34 @@
 									//											mui.toast(data.RspTxt);
 								}
 							});
-							
-							
-							//判断权限  
-							var personal = store.get(window.storageKeyName.PERSONALINFO);
-							var permission =true; 
-							if(personal.utid=='0'){
-								permission=false;
-							}
-							if(permission){
-								plus.webview.open('../../index.html');
-							}
-//							else{//游客身份
-//								plus.webview.open('../../index2.html');
-//							}
-							var wvs = plus.webview.all();
-							for (var i = 0, len = wvs.length; i < len; i++) {
-								if (wvs[i].getURL().indexOf('homeSchoolIndex.html')!=-1
-								||wvs[i].getURL().indexOf('sciedu_home.html')!=-1
-								||wvs[i].getURL().indexOf('courseIndex.html')!=-1){
-											continue;
+
+							//如果密码为1--6，让修改密码后，进入主界面
+							if(personal.password0 == '123456') {
+								var tempModel = {
+									flag:1//0是主动修改密码，1是判断是默认密码，自动让修改
 								}
-								plus.webview.close(wvs[i]);
+								utils.mOpenWithData("../../html/mine/modifyPassword.html", tempModel);
+							} else {
+								//判断权限  
+								var permission = true;
+								if(personal.utid == '0') {
+									permission = false;
+								}
+								if(permission) {
+									plus.webview.open('../../index.html');
+								}
+								var wvs = plus.webview.all();
+								for(var i = 0, len = wvs.length; i < len; i++) {
+									if(wvs[i].getURL().indexOf('homeSchoolIndex.html') != -1 ||
+										wvs[i].getURL().indexOf('sciedu_home.html') != -1 ||
+										wvs[i].getURL().indexOf('courseIndex.html') != -1) {
+										continue;
+									}
+									plus.webview.close(wvs[i]);
+								}
+								var curr = plus.webview.currentWebview();
+								curr.close();
 							}
-							var curr = plus.webview.currentWebview();
-							curr.close();
-//							utils.mOpenWithData("../../index.html", personal);
 						} else {
 							mui.toast(data1.RspTxt);
 						}
