--- a/HomeSchoolInteraction/index.html
+++ b/HomeSchoolInteraction/index.html
@@ -41,13 +41,14 @@
 				</a>
 		</nav>
 		<script src="js/mui.min.js"></script>
+		<script src="js/libs/myStorage/myStorage.js"></script>
 		<script src="js/storageKeyName.js"></script>
 		<script src="js/utils/store.js"></script>
 		<script src="js/utils/utils.js"></script>
 		<script src="js/libs/jquery.js"></script>
 		<script src="js/utils/app-update.js"></script>
 		<script type="text/javascript" charset="utf-8">
-			//mui初始化
+			//mui初始化 
 			mui.init();
 			var subpages =[];
 				subpages=['html/homeSchool/homeSchoolIndex.html', 'html/sciedu/sciedu_home.html',  'html/Course/courseIndex.html', 'html/helpStudy/helpStudyIndex.html'];
@@ -128,7 +129,12 @@
 					defaultTab.classList.add('mui-active');
 				}
 				//判断是否需要更新
-				setTimeout(appUpdate.updateApp, 5000);
+				var personal = store.get(window.storageKeyName.PERSONALINFO);
+				if(personal==''||personal==null||personal==undefined){
+					console.log("无法获得用户学校ID，无法检测更新")
+				}else{
+					appUpdate.updateApp(personal.schid); 
+				}
 			});
 		</script>
 	</body>
