视频预览图标

--- a/HomeSchoolInteraction/index.html
+++ b/HomeSchoolInteraction/index.html
@@ -133,7 +133,7 @@
 				if(personal==''||personal==null||personal==undefined){
 					console.log("无法获得用户学校ID，无法检测更新")
 				}else{
-					appUpdate.updateApp(personal.schid); 
+//					appUpdate.updateApp(personal.schid); 
 				}
 			});
 		</script>
