--- a/HomeSchoolInteraction/html/login/firstPage1.html
+++ b/HomeSchoolInteraction/html/login/firstPage1.html
@@ -54,6 +54,12 @@
 				uuid: plus.device.uuid,
 				appid: plus.runtime.appid
 			}
+			if (tempModel.uuid=='') {
+				var publicPar = store.get(window.storageKeyName.PUBLICPARAMETER);
+				tempModel.uuid = publicPar.uuid;
+				tempModel.appid = publicPar.appid;
+			}
+			
 			setUUID();
 			document.addEventListener("netchange", wainshow, false);
 
@@ -116,13 +122,14 @@
 
 		//login登录
 		var loginPro = function(tempName, tempPW) {
+			var publicPar = store.get(window.storageKeyName.PUBLICPARAMETER);
 			//握手
 			var enData0 = {};
 			//不需要加密的数据
 			var comData0 = {
-				uuid: tempModel.uuid, //用户设备号
+				uuid: publicPar.uuid, //用户设备号
 				shaketype: 'login', //注册(reg),登录(login),修改密码(repw)
-				appid: tempModel.appid //系统所分配的应用ID
+				appid: publicPar.appid //系统所分配的应用ID
 			};
 			events.showWaiting();
 			//发送网络请求，data为网络返回值
@@ -137,9 +144,9 @@
 					};
 					//不需要加密的数据
 					var comData1 = {
-						uuid: tempModel.uuid, //用户设备号
+						uuid: publicPar.uuid, //用户设备号
 						shaketype: 'login', //注册(reg),登录(login),修改密码(repw)
-						appid: tempModel.appid, //系统所分配的应用ID
+						appid: publicPar.appid, //系统所分配的应用ID
 						schid: storageKeyName.SCHOOLID, //学校ID
 						utp: storageKeyName.USERTYPE //用户类型，0老师,1家长,2学生
 					};
@@ -220,7 +227,6 @@
 		//从ios原生得到信息
 		var setUUID = function() {
 //			if(loginFlag == 0) {
-				store.set(window.storageKeyName.PUBLICPARAMETER, tempModel);
 				//判断上次是否登录过，自动登录
 				var personal = store.get(window.storageKeyName.PERSONALINFO);
 				if(personal) {
