--- a/HomeSchoolInteraction/html/login/loginIndex.html
+++ b/HomeSchoolInteraction/html/login/loginIndex.html
@@ -120,7 +120,7 @@
 			console.log("登录");
 			var tempName = document.getElementById("account").value;
 			var tempPW = document.getElementById("password").value;
-			console.log('tempName:' + tempName + ',tempPW' + tempPW);
+			console.log('tempName222:' + tempName + ',tempPW' + tempPW);
 			//判断输入是否符合要求
 			if(checkInput(tempName)) {
 				if(checkInput(tempPW)) {
@@ -155,13 +155,14 @@
 
 		//login登录
 		var loginPro = function(tempName, tempPW) {
+			var publicPar = store.get(window.storageKeyName.PUBLICPARAMETER);
 			//握手
 			var enData0 = {};
 			//不需要加密的数据
 			var comData0 = {
-				uuid: tempModel.uuid, //用户设备号
+				uuid: publicPar.uuid, //用户设备号
 				shaketype: 'login', //注册(reg),登录(login),修改密码(repw)
-				appid: tempModel.appid //系统所分配的应用ID
+				appid: publicPar.appid //系统所分配的应用ID
 			};
 			events.showWaiting();
 			//发送网络请求，data为网络返回值
@@ -176,9 +177,9 @@
 					};
 					//不需要加密的数据
 					var comData1 = {
-						uuid: tempModel.uuid, //用户设备号
+						uuid: publicPar.uuid, //用户设备号
 						shaketype: 'login', //注册(reg),登录(login),修改密码(repw)
-						appid: tempModel.appid, //系统所分配的应用ID
+						appid: publicPar.appid, //系统所分配的应用ID
 						schid: storageKeyName.SCHOOLID, //学校ID
 						utp: storageKeyName.USERTYPE //用户类型，0老师,1家长,2学生
 					};
@@ -278,7 +279,7 @@
 		var setUUID = function(tempStr) {
 			if(loginFlag == 0) {
 				//			var tempModel0 = $.parseJSON(tempStr);
-				store.set(window.storageKeyName.PUBLICPARAMETER, tempModel);
+//				store.set(window.storageKeyName.PUBLICPARAMETER, tempModel);
 				console.log('tempStr:' + tempStr);
 				//判断上次是否登录过，自动登录
 				var personal = store.get(window.storageKeyName.PERSONALINFO);
