--- a/HomeSchoolInteraction/index2.html
+++ b/HomeSchoolInteraction/index2.html
@@ -45,6 +45,7 @@
 		<script src="js/utils/store.js"></script>
 		<script src="js/utils/utils.js"></script>
 		<script src="js/libs/jquery.js"></script>
+		<script src="js/utils/app-update.js"></script>
 		<script type="text/javascript" charset="utf-8">
 			//mui初始化
 			mui.init();
@@ -126,6 +127,13 @@
 					current.classList.remove('mui-active');
 					defaultTab.classList.add('mui-active');
 				}
+				//判断是否需要更新
+//				var personal = store.get(window.storageKeyName.PERSONALINFO);
+//				if(personal==''||personal==null||personal==undefined){
+//					console.log("无法获得用户学校ID，无法检测更新")
+//				}else{
+					appUpdate.updateApp(window.storageKeyName.SCHOOLID);
+//				}
 			});
 		</script>
 	</body>
